scripts/nullaway/nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8.txt
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/equality/ReferenceMatcher.java:18: error: [NullAway] parameter value is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Object value) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/equality/ValueMatcher.java:18: error: [NullAway] parameter value is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Object value) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/values/NullMatcher.java:14: error: [NullAway] parameter value is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Object value) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/values/BooleanMatcher.java:19: error: [NullAway] parameter value is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Boolean value) {
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/types/TypeMatcher.java:15: error: [NullAway] parameter value is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Object value) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/numbers/GreaterMatcher.java:10: error: [NullAway] parameter baseValue is @NonNull, but parameter in superclass method fw.numbers.ComparisonLayer.evaluateLayer(T,T) is @Nullable
    protected boolean evaluateLayer(final T baseValue, final T testValue) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/numbers/NumberMatcher.java:35: error: [NullAway] parameter number is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public abstract boolean evaluate(final T number);
                                             ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/numbers/LowerMatcher.java:10: error: [NullAway] parameter baseValue is @NonNull, but parameter in superclass method fw.numbers.ComparisonLayer.evaluateLayer(T,T) is @Nullable
    protected boolean evaluateLayer(final T baseValue, final T testValue) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/numbers/EqualMatcher.java:10: error: [NullAway] parameter baseValue is @NonNull, but parameter in superclass method fw.numbers.ComparisonLayer.evaluateLayer(T,T) is @Nullable
    protected boolean evaluateLayer(final T baseValue, final T testValue) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/string/RegExpMatcher.java:16: error: [NullAway] parameter value is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final String value) {
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/collections/SizeMatcher.java:14: error: [NullAway] parameter collectionSize is @NonNull, but parameter in superclass method fw.collections.SizeMatcher.Comparator.compare(int,int) is @Nullable
            boolean compare(final int collectionSize, final int expectedSize) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/collections/SizeMatcher.java:21: error: [NullAway] parameter collectionSize is @NonNull, but parameter in superclass method fw.collections.SizeMatcher.Comparator.compare(int,int) is @Nullable
            boolean compare(final int collectionSize, final int expectedSize) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/collections/SizeMatcher.java:28: error: [NullAway] parameter collectionSize is @NonNull, but parameter in superclass method fw.collections.SizeMatcher.Comparator.compare(int,int) is @Nullable
            boolean compare(final int collectionSize, final int expectedSize) {
                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/collections/SizeMatcher.java:67: error: [NullAway] parameter collection is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Collection<?> collection) {
                                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/collections/IncludeMatcher.java:16: error: [NullAway] parameter collection is @NonNull, but parameter in superclass method fw.Matcher.evaluate(T) is @Nullable
    public boolean evaluate(final Collection<?> collection) {
                                                ^
    (see http://t.uber.com/nullaway )
../nullgtn/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/Test.java:35: error: [NullAway] passing @Nullable parameter 'valueNull' where @NonNull is required
        should(valueNull, BE_NULL);
               ^
    (see http://t.uber.com/nullaway )
16 errors
